--- a/firebase.json
+++ b/firebase.json
@@ -18,5 +18,9 @@
         "function": "app"
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
